Fix the line break in the H1 for different device sizes

--- a/retirement_api/static/retirement/css/claiming.css
+++ b/retirement_api/static/retirement/css/claiming.css
@@ -122,6 +122,10 @@ form {
   font-size: 2.125em;
 }
 
+#claiming-social-security .claiming-hero h1 span.header-line {
+  display: block;
+}
+
 #claiming-social-security .claiming-hero p {
   font-size: 1.625em;
 }
@@ -649,6 +653,10 @@ form {
     width: 100%;
   }
 
+  #claiming-social-security .claiming-hero h1 span.header-line {
+    display: inline;
+  }
+
   #claiming-social-security .claiming-hero p {
     margin-bottom: 0px;
   }
@@ -811,6 +819,10 @@ form {
   #claiming-social-security .claiming-hero h1,
   #claiming-social-security .claiming-hero p {
     width: 100%;
+  }
+
+  #claiming-social-security .claiming-hero h1 span.header-line {
+    display: inline;
   }
 
   #claiming-social-security .claiming-hero p {
